normal mode very hard finished just needs end screen hoocked up right

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=1920,Y=0)
+NewWindowPosition=(X=0,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -132,7 +132,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
 NewWindowHeight=992
-MultipleInstancePositions=(X=1920,Y=0)
+MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -344,6 +344,9 @@ TemplateAnimalDeck_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collisio
 WBP_Endgame1PlayerNormalMedium1_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 WBP_1PlayerNormalHard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 WBP_EndgameNormalHard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
+WBP_1PlayerNormalVeryHard_C=
+EdGraphNode=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
+Set Image Badges_53=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 
 [EditorStartup]
 LastLevel=/Engine/Maps/Templates/OpenWorld
@@ -353,11 +356,12 @@ CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=EnumEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -380,40 +384,40 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=MaterialInstanceEditor
-OpenAssetsAtExit=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard.WBP_ImageCard
+OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard.WBP_1PlayerNormalVeryHard
+OpenAssetsAtExit=/Game/UI/Main_Menu.Main_Menu
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
-MRUItem1=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
-MRUItem2=/Game/DataBetweenLevels
-MRUItem3=/Game/UI/Settings_Menu
-MRUItem4=/Game/ArraySizes
-MRUItem5=/Game/UI/Main_Menu
-MRUItem6=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard
-MRUItem7=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium
-MRUItem8=/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalHard
-MRUItem9=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
-MRUItem10=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
-MRUItem11=/Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalMedium1
-MRUItem12=/Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalEasy
-MRUItem13=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/TemplateAnimalDeck
-MRUItem14=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/WBP_EasyTimedTest
-MRUItem15=/Game/CardGM
-MRUItem16=/Game/UI/Game_Mode_Data/Card_Pack
-MRUItem17=/Game/MemoryGame/Maps/M_MemoryGame
-MRUItem18=/Game/UI/Gameplay_Screen_1_Player
-MRUItem19=/Game/Cards/Card
-MRUItem20=/Game/CardManager
-MRUItem21=/Game/CardPlayer
-MRUItem22=/Game/Interact
-MRUItem23=/Game/PlayerControllerCard
-MRUItem24=/Game/Cards/Bat
-MRUItem25=/Game/Cards/Bee
-MRUItem26=/Game/Cards/Llama
-MRUItem27=/Game/Cards/Turtle
-MRUItem28=/Game/ClickableComponent
-MRUItem29=/Game/Meshes/Turtle
+MRUItem0=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
+MRUItem1=/Game/UI/Main_Menu
+MRUItem2=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard
+MRUItem3=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_EasyTimedTest
+MRUItem4=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
+MRUItem5=/Game/DataBetweenLevels
+MRUItem6=/Game/UI/Settings_Menu
+MRUItem7=/Game/ArraySizes
+MRUItem8=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard
+MRUItem9=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium
+MRUItem10=/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalHard
+MRUItem11=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
+MRUItem12=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
+MRUItem13=/Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalMedium1
+MRUItem14=/Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalEasy
+MRUItem15=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/TemplateAnimalDeck
+MRUItem16=/Game/CardGM
+MRUItem17=/Game/UI/Game_Mode_Data/Card_Pack
+MRUItem18=/Game/MemoryGame/Maps/M_MemoryGame
+MRUItem19=/Game/UI/Gameplay_Screen_1_Player
+MRUItem20=/Game/Cards/Card
+MRUItem21=/Game/CardManager
+MRUItem22=/Game/CardPlayer
+MRUItem23=/Game/Interact
+MRUItem24=/Game/PlayerControllerCard
+MRUItem25=/Game/Cards/Bat
+MRUItem26=/Game/Cards/Bee
+MRUItem27=/Game/Cards/Llama
+MRUItem28=/Game/Cards/Turtle
+MRUItem29=/Game/ClickableComponent
 
 [DetailCategories]
 CardPlayer_C.TransformCommon=True
@@ -884,7 +888,7 @@ WBP_Easy_C.Navigation=True
 K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
-EdGraph.Graph=True
+EdGraph.Graph=False
 EdGraph.Inputs=True
 EdGraph.Outputs=True
 WBP_ImageCard_C.Setup=True
@@ -1932,6 +1936,26 @@ SkyAtmosphereComponent.Atmosphere - Mie=True
 SkyAtmosphereComponent.Atmosphere - Absorption=True
 SkyAtmosphereComponent.Art Direction=True
 DataBetweenLevels_C.Default=True
+WBP_1PlayerNormalVeryHard_C.Images to Guess=True
+WBP_1PlayerNormalVeryHard_C.Option Buttons=True
+WBP_1PlayerNormalVeryHard_C.Game Setup=True
+WBP_1PlayerNormalVeryHard_C.Image Cards=True
+WBP_1PlayerNormalVeryHard_C.Clue Setup=True
+WBP_1PlayerNormalVeryHard_C.Point Setup=True
+WBP_1PlayerNormalVeryHard_C.Tries Setup=True
+WBP_1PlayerNormalVeryHard_C.Input=True
+WBP_1PlayerNormalVeryHard_C.Default=True
+WBP_1PlayerNormalVeryHard_C.Appearance=True
+WBP_1PlayerNormalVeryHard_C.Interaction=True
+WBP_1PlayerNormalVeryHard_C.Designer=True
+WBP_1PlayerNormalVeryHard_C.Performance=True
+WBP_1PlayerNormalVeryHard_C.Layout=True
+WBP_1PlayerNormalVeryHard_C.Behavior=True
+WBP_1PlayerNormalVeryHard_C.Render Transform=True
+WBP_1PlayerNormalVeryHard_C.Localization=True
+WBP_1PlayerNormalVeryHard_C.Accessibility=True
+WBP_1PlayerNormalVeryHard_C.Rendering=True
+WBP_1PlayerNormalVeryHard_C.Navigation=True
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -1966,7 +1990,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Sound/Irish_sounds
+ContentBrowserDrawer.SelectedPaths=/Game/MemoryGame/Images/Animals-deck
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2020,8 +2044,8 @@ Texture="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -2029,17 +2053,17 @@ HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.Rende
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Gameplay_Screen_1_Player_C="\"Object\" "
-UserWidget="\"Object\" "
+UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Settings_Menu_C="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 Main_Menu_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 EdGraphNode_Comment="\"Object\" \"Object.Comment.CommentColor\" "
-EdGraphNode="\"Object\" \"Object.PinOptions.PinNames\" "
+EdGraphNode="\"Object\" \"Object.Comment.CommentColor\" "
 Settings_Menu_Title_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_Easy_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-WBP_ImageCard_C="\"Object\" "
+WBP_ImageCard_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Border="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 AudioTextBox_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_EndGame_C="\"Object\" "
@@ -2277,6 +2301,7 @@ SkyLightComponent="\"Object\" "
 SkyAtmosphereComponent="\"Object\" "
 VolumetricCloudComponent="\"Object\" "
 ExponentialHeightFogComponent="\"Object\" "
+WBP_1PlayerNormalVeryHard_C="\"Object\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Card.Card;
@@ -2347,6 +2372,7 @@ PerWorldEditorSettings=(("/Game/Untitled.Untitled", (LoadedEditorRegions=((Min=(
 /Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard.WBP_1PlayerNormalHard=1
 /Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate.WBP_1PlayerNormalEasyTemplate=0
 /Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalHard.WBP_EndgameNormalHard=0
+/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard.WBP_1PlayerNormalVeryHard=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2568,7 +2594,7 @@ bDrawGrid=False
 PrimType=1
 
 [RootWindow]
-ScreenPosition=X=186.000 Y=254.000
+ScreenPosition=X=216.000 Y=221.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
