laast comits isues fixed

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1914,Y=992)
 LastExecutedLaunchDevice=Windows@LOGANS
 LastExecutedLaunchName=LOGANS
 LastExecutedPIEPreviewDevice=
@@ -344,7 +344,7 @@ TemplateAnimalDeck_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collisio
 WBP_Endgame1PlayerNormalMedium1_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 WBP_1PlayerNormalHard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 WBP_EndgameNormalHard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
-WBP_1PlayerNormalVeryHard_C=
+WBP_1PlayerNormalVeryHard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 EdGraphNode=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 Set Image Badges_53=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 
@@ -359,11 +359,12 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=EnumEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -383,41 +384,42 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard.WBP_1PlayerNormalVeryHard
-OpenAssetsAtExit=/Game/UI/Main_Menu.Main_Menu
+OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard.WBP_1PlayerNormalHard
+OpenAssetsAtExit=/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalHard.WBP_EndgameNormalHard
+OpenAssetsAtExit=/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalVeryHard.WBP_EndgameNormalVeryHard
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
-MRUItem1=/Game/UI/Main_Menu
-MRUItem2=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard
-MRUItem3=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_EasyTimedTest
-MRUItem4=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
-MRUItem5=/Game/DataBetweenLevels
-MRUItem6=/Game/UI/Settings_Menu
-MRUItem7=/Game/ArraySizes
-MRUItem8=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard
-MRUItem9=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium
-MRUItem10=/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalHard
-MRUItem11=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
-MRUItem12=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
-MRUItem13=/Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalMedium1
-MRUItem14=/Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalEasy
-MRUItem15=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/TemplateAnimalDeck
-MRUItem16=/Game/CardGM
-MRUItem17=/Game/UI/Game_Mode_Data/Card_Pack
-MRUItem18=/Game/MemoryGame/Maps/M_MemoryGame
-MRUItem19=/Game/UI/Gameplay_Screen_1_Player
-MRUItem20=/Game/Cards/Card
-MRUItem21=/Game/CardManager
-MRUItem22=/Game/CardPlayer
-MRUItem23=/Game/Interact
-MRUItem24=/Game/PlayerControllerCard
-MRUItem25=/Game/Cards/Bat
-MRUItem26=/Game/Cards/Bee
-MRUItem27=/Game/Cards/Llama
-MRUItem28=/Game/Cards/Turtle
-MRUItem29=/Game/ClickableComponent
+MRUItem0=/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalVeryHard
+MRUItem1=/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalHard
+MRUItem2=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard
+MRUItem3=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard
+MRUItem4=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
+MRUItem5=/Game/UI/Main_Menu
+MRUItem6=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_EasyTimedTest
+MRUItem7=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
+MRUItem8=/Game/DataBetweenLevels
+MRUItem9=/Game/UI/Settings_Menu
+MRUItem10=/Game/ArraySizes
+MRUItem11=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium
+MRUItem12=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
+MRUItem13=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
+MRUItem14=/Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalMedium1
+MRUItem15=/Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalEasy
+MRUItem16=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/TemplateAnimalDeck
+MRUItem17=/Game/CardGM
+MRUItem18=/Game/UI/Game_Mode_Data/Card_Pack
+MRUItem19=/Game/MemoryGame/Maps/M_MemoryGame
+MRUItem20=/Game/UI/Gameplay_Screen_1_Player
+MRUItem21=/Game/Cards/Card
+MRUItem22=/Game/CardManager
+MRUItem23=/Game/CardPlayer
+MRUItem24=/Game/Interact
+MRUItem25=/Game/PlayerControllerCard
+MRUItem26=/Game/Cards/Bat
+MRUItem27=/Game/Cards/Bee
+MRUItem28=/Game/Cards/Llama
+MRUItem29=/Game/Cards/Turtle
 
 [DetailCategories]
 CardPlayer_C.TransformCommon=True
@@ -1956,6 +1958,22 @@ WBP_1PlayerNormalVeryHard_C.Localization=True
 WBP_1PlayerNormalVeryHard_C.Accessibility=True
 WBP_1PlayerNormalVeryHard_C.Rendering=True
 WBP_1PlayerNormalVeryHard_C.Navigation=True
+WBP_EndgameNormalVeryHard_C.Option Buttons=True
+WBP_EndgameNormalVeryHard_C.Input=True
+WBP_EndgameNormalVeryHard_C.End Game Setup=True
+WBP_EndgameNormalVeryHard_C.End Game Messages=True
+WBP_EndgameNormalVeryHard_C.Game Setup=True
+WBP_EndgameNormalVeryHard_C.Appearance=True
+WBP_EndgameNormalVeryHard_C.Interaction=True
+WBP_EndgameNormalVeryHard_C.Designer=True
+WBP_EndgameNormalVeryHard_C.Performance=True
+WBP_EndgameNormalVeryHard_C.Layout=True
+WBP_EndgameNormalVeryHard_C.Behavior=True
+WBP_EndgameNormalVeryHard_C.Render Transform=True
+WBP_EndgameNormalVeryHard_C.Localization=True
+WBP_EndgameNormalVeryHard_C.Accessibility=True
+WBP_EndgameNormalVeryHard_C.Rendering=True
+WBP_EndgameNormalVeryHard_C.Navigation=True
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -2015,7 +2033,7 @@ PawnMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \
 NavMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" "
 MovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" "
 ActorComponent="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CardPlayer_C=
 Character=
 Pawn=
@@ -2288,11 +2306,11 @@ WBP_Endgame1PlayerNormalEasy_C="\"Object\" "
 WBP_1PlayerNormalEasyTemplate_C="\"Object\" "
 WBP_Memorygameanimaldecktemplate_C="\"Object\" "
 WBP_Mediumtest_C="\"Object\" "
-WBP_1playerNormalHard_C="\"Object\" "
+WBP_1playerNormalHard_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_1PlayerNormalMedium_C="\"Object\" "
 TemplateAnimalDeck_C="\"Object\" "
 WBP_Endgame1PlayerNormalMedium1_C="\"Object\" "
-WBP_EndgameNormalHard_C="\"Object\" "
+WBP_EndgameNormalHard_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 RichTextBlock="\"Object\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 DirectionalLightComponent="\"Object\" "
 LightComponent="\"Object\" "
@@ -2302,6 +2320,7 @@ SkyAtmosphereComponent="\"Object\" "
 VolumetricCloudComponent="\"Object\" "
 ExponentialHeightFogComponent="\"Object\" "
 WBP_1PlayerNormalVeryHard_C="\"Object\" "
+WBP_EndgameNormalVeryHard_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Card.Card;
@@ -2371,8 +2390,9 @@ PerWorldEditorSettings=(("/Game/Untitled.Untitled", (LoadedEditorRegions=((Min=(
 /Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalMedium1.WBP_Endgame1PlayerNormalMedium1=1
 /Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard.WBP_1PlayerNormalHard=1
 /Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate.WBP_1PlayerNormalEasyTemplate=0
-/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalHard.WBP_EndgameNormalHard=0
+/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalHard.WBP_EndgameNormalHard=1
 /Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard.WBP_1PlayerNormalVeryHard=0
+/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalVeryHard.WBP_EndgameNormalVeryHard=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
