timed mode easy finsed

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=0,Y=0)
+NewWindowPosition=(X=1920,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -132,7 +132,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
 NewWindowHeight=992
-MultipleInstancePositions=(X=0,Y=0)
+MultipleInstancePositions=(X=1920,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -347,6 +347,7 @@ WBP_EndgameNormalHard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Colli
 WBP_1PlayerNormalVeryHard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 EdGraphNode=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 Set Image Badges_53=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
+WBP_1PlayerTimedEasyTemplate1_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 
 [EditorStartup]
 LastLevel=/Engine/Maps/Templates/OpenWorld
@@ -362,11 +363,13 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=EnumEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -382,44 +385,43 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedEasyTemplate1.WBP_1PlayerTimedEasyTemplate1
+OpenAssetsAtExit=/Game/UI/Main_Menu.Main_Menu
 OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard.WBP_1PlayerNormalVeryHard
-OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard.WBP_1PlayerNormalHard
-OpenAssetsAtExit=/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalHard.WBP_EndgameNormalHard
-OpenAssetsAtExit=/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalVeryHard.WBP_EndgameNormalVeryHard
+OpenAssetsAtExit=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalVeryHard.WBP_EndgameNormalVeryHard
+OpenAssetsAtExit=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedEasy1.WBP_Endgame1PlayerTimedEasy1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalVeryHard
-MRUItem1=/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalHard
-MRUItem2=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard
-MRUItem3=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard
-MRUItem4=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
-MRUItem5=/Game/UI/Main_Menu
+MRUItem0=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard
+MRUItem1=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedEasy1
+MRUItem2=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalVeryHard
+MRUItem3=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalHard
+MRUItem4=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_Endgame1PlayerNormalMedium1
+MRUItem5=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_Endgame1PlayerNormalEasy
 MRUItem6=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_EasyTimedTest
-MRUItem7=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
-MRUItem8=/Game/DataBetweenLevels
-MRUItem9=/Game/UI/Settings_Menu
-MRUItem10=/Game/ArraySizes
-MRUItem11=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium
-MRUItem12=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
-MRUItem13=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
-MRUItem14=/Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalMedium1
-MRUItem15=/Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalEasy
-MRUItem16=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/TemplateAnimalDeck
-MRUItem17=/Game/CardGM
-MRUItem18=/Game/UI/Game_Mode_Data/Card_Pack
-MRUItem19=/Game/MemoryGame/Maps/M_MemoryGame
-MRUItem20=/Game/UI/Gameplay_Screen_1_Player
-MRUItem21=/Game/Cards/Card
-MRUItem22=/Game/CardManager
-MRUItem23=/Game/CardPlayer
-MRUItem24=/Game/Interact
-MRUItem25=/Game/PlayerControllerCard
-MRUItem26=/Game/Cards/Bat
-MRUItem27=/Game/Cards/Bee
-MRUItem28=/Game/Cards/Llama
-MRUItem29=/Game/Cards/Turtle
+MRUItem7=/Game/UI/Main_Menu
+MRUItem8=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedEasyTemplate1
+MRUItem9=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard
+MRUItem10=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
+MRUItem11=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
+MRUItem12=/Game/DataBetweenLevels
+MRUItem13=/Game/UI/Settings_Menu
+MRUItem14=/Game/ArraySizes
+MRUItem15=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium
+MRUItem16=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
+MRUItem17=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
+MRUItem18=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/TemplateAnimalDeck
+MRUItem19=/Game/CardGM
+MRUItem20=/Game/UI/Game_Mode_Data/Card_Pack
+MRUItem21=/Game/MemoryGame/Maps/M_MemoryGame
+MRUItem22=/Game/UI/Gameplay_Screen_1_Player
+MRUItem23=/Game/Cards/Card
+MRUItem24=/Game/CardManager
+MRUItem25=/Game/CardPlayer
+MRUItem26=/Game/Interact
+MRUItem27=/Game/PlayerControllerCard
+MRUItem28=/Game/Cards/Bat
+MRUItem29=/Game/Cards/Bee
 
 [DetailCategories]
 CardPlayer_C.TransformCommon=True
@@ -1974,6 +1976,43 @@ WBP_EndgameNormalVeryHard_C.Localization=True
 WBP_EndgameNormalVeryHard_C.Accessibility=True
 WBP_EndgameNormalVeryHard_C.Rendering=True
 WBP_EndgameNormalVeryHard_C.Navigation=True
+WBP_1PlayerTimedEasyTemplate1_C.Images to Guess=True
+WBP_1PlayerTimedEasyTemplate1_C.Option Buttons=True
+WBP_1PlayerTimedEasyTemplate1_C.Game Setup=True
+WBP_1PlayerTimedEasyTemplate1_C.Image Cards=True
+WBP_1PlayerTimedEasyTemplate1_C.Clue Setup=True
+WBP_1PlayerTimedEasyTemplate1_C.Point Setup=True
+WBP_1PlayerTimedEasyTemplate1_C.Tries Setup=True
+WBP_1PlayerTimedEasyTemplate1_C.Input=True
+WBP_1PlayerTimedEasyTemplate1_C.Default=True
+WBP_1PlayerTimedEasyTemplate1_C.Appearance=True
+WBP_1PlayerTimedEasyTemplate1_C.Interaction=True
+WBP_1PlayerTimedEasyTemplate1_C.Designer=True
+WBP_1PlayerTimedEasyTemplate1_C.Performance=True
+WBP_1PlayerTimedEasyTemplate1_C.Layout=True
+WBP_1PlayerTimedEasyTemplate1_C.Behavior=True
+WBP_1PlayerTimedEasyTemplate1_C.Render Transform=True
+WBP_1PlayerTimedEasyTemplate1_C.Localization=True
+WBP_1PlayerTimedEasyTemplate1_C.Accessibility=True
+WBP_1PlayerTimedEasyTemplate1_C.Rendering=True
+WBP_1PlayerTimedEasyTemplate1_C.Navigation=True
+WBP_Endgame1PlayerTimedEasy1_C.Option Buttons=True
+WBP_Endgame1PlayerTimedEasy1_C.Input=True
+WBP_Endgame1PlayerTimedEasy1_C.End Game Setup=True
+WBP_Endgame1PlayerTimedEasy1_C.End Game Messages=True
+WBP_Endgame1PlayerTimedEasy1_C.Default=True
+WBP_Endgame1PlayerTimedEasy1_C.Game Setup=True
+WBP_Endgame1PlayerTimedEasy1_C.Appearance=True
+WBP_Endgame1PlayerTimedEasy1_C.Interaction=True
+WBP_Endgame1PlayerTimedEasy1_C.Designer=True
+WBP_Endgame1PlayerTimedEasy1_C.Performance=True
+WBP_Endgame1PlayerTimedEasy1_C.Layout=True
+WBP_Endgame1PlayerTimedEasy1_C.Behavior=True
+WBP_Endgame1PlayerTimedEasy1_C.Render Transform=True
+WBP_Endgame1PlayerTimedEasy1_C.Localization=True
+WBP_Endgame1PlayerTimedEasy1_C.Accessibility=True
+WBP_Endgame1PlayerTimedEasy1_C.Rendering=True
+WBP_Endgame1PlayerTimedEasy1_C.Navigation=True
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -2008,7 +2047,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/MemoryGame/Images/Animals-deck
+ContentBrowserDrawer.SelectedPaths=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2025,7 +2064,7 @@ SequencerAssetPicker.ThumbnailSize=2
 SequencerAssetPicker.CurrentViewType=0
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [DetailPropertyExpansion]
 CharacterMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" "
@@ -2033,7 +2072,7 @@ PawnMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \
 NavMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" "
 MovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" "
 ActorComponent="\"Object\" "
-Object="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" "
 CardPlayer_C=
 Character=
 Pawn=
@@ -2111,7 +2150,7 @@ K2Node_Switch="\"Object\" \"Object.PinOptions.PinNames\" "
 K2Node="\"Object\" \"Object.PinOptions.PinNames\" "
 CardManager_C=
 WBP_MemoryGame_C="\"Object\" "
-WBP_EasyTimedTest_C="\"Object\" "
+WBP_EasyTimedTest_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_EasyTemplate_C="\"Object\" "
 K2Node_SwitchString="\"Object\" \"Object.PinOptions.PinNames\" "
 K2Node_MakeStruct="\"Object\" "
@@ -2319,8 +2358,10 @@ SkyLightComponent="\"Object\" "
 SkyAtmosphereComponent="\"Object\" "
 VolumetricCloudComponent="\"Object\" "
 ExponentialHeightFogComponent="\"Object\" "
-WBP_1PlayerNormalVeryHard_C="\"Object\" "
+WBP_1PlayerNormalVeryHard_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_EndgameNormalVeryHard_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WBP_1PlayerTimedEasyTemplate1_C="\"Object\" "
+WBP_Endgame1PlayerTimedEasy1_C="\"Object\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Card.Card;
@@ -2393,6 +2434,10 @@ PerWorldEditorSettings=(("/Game/Untitled.Untitled", (LoadedEditorRegions=((Min=(
 /Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalHard.WBP_EndgameNormalHard=1
 /Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard.WBP_1PlayerNormalVeryHard=0
 /Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalVeryHard.WBP_EndgameNormalVeryHard=0
+/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_EasyTimedTest.WBP_EasyTimedTest=0
+/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedEasyTemplate1.WBP_1PlayerTimedEasyTemplate1=1
+/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalVeryHard.WBP_EndgameNormalVeryHard=0
+/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedEasy1.WBP_Endgame1PlayerTimedEasy1=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
